# detect_track

./: CMakeLists.txt  README.md  detect.cpp  detect_track.cpp  track.cpp
运动目标检测及跟踪/: .~检测及跟踪.pptx  基于OpenCV的运动目标检测与跟踪.doc  检测及跟踪.pptx
